@@ -162,6 +162,7 @@
     {-} !setoffset no longer required or supported
     {-} Remove !lame and associated classes
     {-} Remove !manageuser, !users, !leechers, !traders, !userslots, !freeslots and !finduser
+    {-} Remove !nologinmsg, breaks many cmds due to missing responses
 
 --=============================( SLFTP v1.5.5 )===================================-
   ** NOTE: FROM NOW ON YOU HAVE TO USE THE MAKEFILE ON LINUX AND THE MAKE.BAT ON WINDOWS **
